# controllers/books.js
@@ -3,6 +3,7 @@ const mongodb = require('../database/data');
 const { response } = require('express');
 
 const getAll = async(req, res) => {
+    //#swagger.tags = ['Books']
     try{
         const result = await mongodb.getDb().db('book_info').collection('books').find().toArray();
         res.setHeader('Content-Type', 'application/json');
@@ -13,6 +14,7 @@ const getAll = async(req, res) => {
 };
 
 const getOne = async(req, res) => {
+    //#swagger.tags = ['Books']
     try{
         const bookId = new ObjectId(req.params.id);
         const result = await mongodb.getDb().db('book_info').collection('books').find({_id: bookId }).toArray();
@@ -24,6 +26,7 @@ const getOne = async(req, res) => {
 };
 
 const uploadBook = async (req, res) => {
+    //#swagger.tags = ['Books']
     const book = {
         name: req.body.name,
         author: req.body.author,
@@ -42,6 +45,7 @@ const uploadBook = async (req, res) => {
 };
 
 const updateBook = async (req, res) => {
+    //#swagger.tags = ['Books']
     if (!ObjectId.isValid(req.params.id)){
         res.status(400).json('Must use a valid book id to find a book.');
     }
@@ -64,6 +68,7 @@ const updateBook = async (req, res) => {
 };
 
 const deleteBook = async (req, res) => {
+    //#swagger.tags = ['Books']
     if (!ObjectId.isValid(req.params.id)){
         res.status(400).json('Must use a valid book id to find a book.');
     }
