# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "cse341-bookworm.onrender.com",
   "basePath": "/",
   "schemes": [
     "https",
@@ -24,6 +24,9 @@
     },
     "/book": {
       "get": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -38,6 +41,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -86,6 +92,9 @@
     },
     "/book/{id}": {
       "get": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -108,6 +117,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
@@ -163,6 +175,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Books"
+        ],
         "description": "",
         "parameters": [
           {
